tests/paczka1/small_fuzzy/95340805.err
Error in line 1: S875 A890 45,2
Error in line 4: tdXo S875 57,3
Error in line 5: tdXo A890 31,5
Error in line 12: ep2AoytP2xg S51 12,2
Error in line 16: tdXo E51 26,1
